fix spacing bug.

--- a/client/src/style.less
+++ b/client/src/style.less
@@ -153,6 +153,7 @@ body.index {
         width: 96px;
         height: 96px;
         margin-right: 1em;
+        margin-bottom: 1em;
 
         @media(max-width: @small_breakpoint) {
           width: 64px;
